--- a/request-demo/src/main/webapp/register.html
+++ b/request-demo/src/main/webapp/register.html
@@ -12,7 +12,7 @@
         <h1>欢迎注册</h1>
         <span>已有帐号？</span> <a href="login.html">登录</a>
     </div>
-    <form id="reg-form" action="#" method="get">
+    <form id="reg-form" action="/request-demo/registerServlet" method="post">
 
         <table>
 
